--- a/Assigment1.ipynb
+++ b/Assigment1.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "### Question 1 : Python Installation and Execute \n",
     "\n",
-    "![label1](./picc.pnG)\n"
+    "![label1](./picc.png)\n"
    ]
   },
   {
